<resources>
    <string name="app_name">RecyApp</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="m_escaneo_qr">Escanear código QR</string>
    <string name="m_nivel_puntos">Mi nivel y puntos obtenidos</string>
    <string name="m_perfil">Mi perfil</string>

    <!-- Edit this part with your local ip address -->
    <string name="dir_conexion">192.168.1.2</string>
</resources>